create flashcard service abstraction